fix: ajuste no gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -495,7 +495,7 @@ main {
   flex-direction: column;
   align-items: flex-end;
   justify-content: space-between;
-  gap: 0.5rem;
+  gap: 0;
   height: 3.5rem;
 }
 
@@ -1464,12 +1464,12 @@ main {
     width: 33%;
   }
 
-  
+
 }
 
 @media (max-width: 576px) {
 
-  
+
 
   .secao-consumidor__imagem-envolucro,
   .secao-lancamentos__imagem-envolucro {
